content/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: content-svc
spec:
  selector:
    app: content-dep
  ports:
  - port: 443
    targetPort: 8080
