content/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: content-ing
  labels:
    name: content-ing
spec:
  rules:
  - host: api.birdsocial.app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: content-srv
            port: 
              number: 443
